fixes another z-index issue with Mapillary imagery

--- a/public/javascripts/SVValidate/css/svv-modal.css
+++ b/public/javascripts/SVValidate/css/svv-modal.css
@@ -37,7 +37,7 @@
     border: 5px solid black;
 
     border-radius: 3px 3px 3px 3px;
-    z-index: 4;
+    z-index: 10;
     -webkit-border-radius: 3px 3px 3px 3px;
     -moz-border-radius: 3px 3px 3px 3px;
 }
